--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -5,10 +5,9 @@
   </div>
 
   <div>
-    <label>Name:
-      <input [(ngModel)]="hero.name" placeholder="name" />
+    <label>
+      Name: <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
+  <button (click)="goBack()">go back</button>
 </diV>
-
-<button (click)="goBack()">go back</button>
