--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,13 +1,12 @@
-<diV *ngIf="hero">
+<div *ngIf="hero">
   <h2>{{ hero.name | uppercase }} Details</h2>
   <div>
-    <span>id: </span>{{ hero.id }}
-  </div>
-
+    <span>id: </span>{{hero.id}}</div>
   <div>
-    <label>
-      Name: <input [(ngModel)]="hero.name" placeholder="name" />
+    <label>name:
+      <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
   <button (click)="goBack()">go back</button>
-</diV>
+  <button (click)="save()">save</button>
+</div>
